tests/diagnostics/cases/parse/03_keyword_as_variable.home.expected
<repo>/tests/diagnostics/cases/parse/03_keyword_as_variable.home:3:9: error[EP0001]: Expected variable name
      let if = 1
           ^

1 parse error(s) found
Checking: <repo>/tests/diagnostics/cases/parse/03_keyword_as_variable.home

Success: Type checking passed ✓
