tests/diagnostics/cases/parse/03_keyword_as_variable.home
// Parse error: using a keyword (`if`) as a variable name.
fn main() {
    let if = 1
}
